syntax = "proto3";
package maintenance;
option go_package = "github.com/cloudogu/k8s-ces-control/generated/maintenance";
import 'response.proto';

// The SupportArchive service provides endpoints to create the support archive.
service SupportArchive {
  rpc Create(CreateSupportArchiveRequest) returns (stream types.ChunkedDataResponse);
}

message CreateSupportArchiveRequest {
  // CollectEtcd defines whether etcd keys/values should be contained in the final archive (true) or nor (false)
  bool collectEtcd = 1;

  // CollectOsInformation defines whether information about soft- and hardware should be contained in the final archive (true) or nor (false)
  bool collectOsInformation = 2;

  // CollectEnvironment defines whether the environment variables should be contained in the final archive (true) or nor (false)
  bool collectEnvironment = 3;

  // CollectDoguStatusInformation defines whether information about installed dogus should be contained in the final archive (true) or nor (false)
  bool collectDoguStatusInformation = 4;

  // CollectProcessInformation defines whether the Process and service status should be contained in the final archive (true) or nor (false)
  bool collectProcessInformation = 5;

  // CollectVolumeInformation defines whether the volume information should be contained in the final archive (true) or nor (false)
  bool collectVolumeInformation = 6;

  // ExcludedEtcdKeys is a list of etcd keys which should not be included in the final archive.
  repeated string excludedEtcdKeys = 7;

  // FailFast defines whether the archive collection should fail at the first error (true) or not (false).
  bool failFast = 8;

  // CollectLogsFromTheseDogus must be a list of dogus. Only the logs of these dogus are collected - all other dogu logs are skipped.
  repeated string collectLogsFromTheseDogus = 9;

  // CollectCesappLog defines whether the cesapp logfile should be collected (true) or not (false).
  bool collectCesappLog = 10;

  // CollectCesappdLog defines whether the cesappd logfile should be collected (true) or not (false).
  bool collectCesappdLog = 11;

  // CollectSyslog defines whether the syslog logfile should be collected (true) or not (false).
  bool collectSyslog = 12;

  // CollectAptLog defines whether the apt logfiles should be collected (true) or not (false).
  bool collectAptLog = 13;

  // CollectBackupWatcherLog defines whether the backup-watcher logfile should be collected (true) or not (false).
  bool collectBackupWatcherLog = 14;
}
